2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Add some primitives for Floats
	* src/object/fwd.hh (float_traits, Float, rFloat, integer_traits)
	(Integer, rInteger, string_traits, String, rString): Fwd decl
	or declare them.
	* src/object/atom.cc, src/object/atom.hh, src/object/atom.hxx:
	(kind_type, string_of): New.
	(kind_get): Now return the kind, not a string.
	* src/object/object.cc, src/object/object.hh, src/object/object.hxx:
	(float_class_add, float_class_div, float_class_mul, float_class_sub):
	New.

	* src/object/object-test-primitives.cc: New.
	* src/object/Makefile.am: Adjust.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	merge -r 1216:1261 https://svn.gostai.com/svn/kernel1/trunk
	2007-07-12  mefyl  <mefyl@lrde.epita.fr>
	Fix previous patch: use automerge.
	* .automerge: Update.

	2007-07-12  mefyl  <mefyl@lrde.epita.fr>
	Fix logic operators precedence.
	* src/parser/bison/ugrammar.y: Here.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	clone
	* src/object/object-test-parent.cc: Try using clone.
	* src/object/object.hh, src/object/object.hxx,
	* src/object/object.cc (clone): New.
	(new_object_class, new_float_class): New.
	(object_class, float_class): New.
	Unused for the time being.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Handle pointer attributes and blocks of code insertion in pretty-printer generator.
	* dev/ast-pretty-printer-gen: Here.
	* src/ast/ast.yml: Document.
	* dev/ast.py: Add method to lookup a node attribute.
	* src/ast/Makefile.am: Fix filename error.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	CallExp: optional target
	* src/ast/ast.yml: The CallExp can have an empty target.
	Disable the printing of the target, as the infrastructure is
	not ready yet.
	* src/parser/bison/ugrammar.y: Adjust.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Operators are syntactic sugar for method calls
	* dev/ast-pretty-printer-gen: We now use more libport tools.
	* src/ast/ast.yml (CallExp): Provide a printer.